--- a/public/room.html
+++ b/public/room.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1 id="title"></h1>
-    <h2 id="players"></h2>
+    <div class="container">
+        <div id="players"></div>
+    </div>
     <script src="/socket.io/socket.io.js"></script>
     <script>
         const socket = io();
@@ -28,8 +30,31 @@
 
         // ルームのメンバー更新を受け取る
         socket.on('updateRoomMembers', (data) => {
-            console.log(data.players.join(', '))
+            players = data.players
+            window.location.replace(`room.html?roomid=${roomId}?playerid=${playerId}?players=${players}`)
         });
+
+        function createPlayerBlock(player) {
+            const div = document.createElement('div');
+            div.innerHTML = `
+                <div class="player-block">
+                <p>${player}</p>
+                </div>
+            `;
+            return div;
+        }
+
+        socket.emit('getPlayerNames', players, (response) => {
+            if(!response || !response.success){
+                alert(response ? response.message : 'プレイヤー情報の取得に失敗しました');
+            }else{
+                let playerNames = response.playerNames
+                const showPlayers = document.getElementById("players");
+                for(let i=0; i<playerNames.length; i++){
+                    showPlayers.appendChild(createPlayerBlock(playerNames[i]))
+                }
+            }
+        })
     </script>
 </body>
 </html>
