オーナープレイヤーの画面にだけ開始ボタンを表示

--- a/public/room.html
+++ b/public/room.html
@@ -9,6 +9,9 @@
     <h1 id="title"></h1>
     <div class="container">
         <div id="players"></div>
+        <div class="submit">
+            <button id="start">開始</button>
+        </div>
     </div>
     <script src="/socket.io/socket.io.js"></script>
     <script>
@@ -17,8 +20,11 @@
         let title = document.getElementById("title")
         let urls = String(window.location.href).split('?')
         let players = urls[3].substr(8,urls[3].length).split(',')
+        let myPermissionClass = 'none'
         const playerId = urls[2].substr(9,urls[1].length)
         const roomId = urls[1].substr(7,urls[1].length)
+        const startBtn = document.getElementById('start')
+        startBtn.style.display = 'none'
 
         // console.log(`playerId: ${playerId}`)
 
@@ -34,24 +40,41 @@
             window.location.replace(`room.html?roomid=${roomId}?playerid=${playerId}?players=${players}`)
         });
 
-        function createPlayerBlock(player) {
+        function createPlayerBlock(player, permissionClass) {
             const div = document.createElement('div');
             div.innerHTML = `
                 <div class="player-block">
-                <p>${player}</p>
+                <p>${player}：${permissionClass}</p>
                 </div>
             `;
             return div;
         }
 
-        socket.emit('getPlayerNames', players, (response) => {
+        // プレイヤー名の取得
+        socket.emit('getPlayerNames', {players: players, roomId:roomId}, (response) => {
             if(!response || !response.success){
                 alert(response ? response.message : 'プレイヤー情報の取得に失敗しました');
             }else{
                 let playerNames = response.playerNames
+                let playerPermissionClasses = response.playerPermissionClasses
                 const showPlayers = document.getElementById("players");
                 for(let i=0; i<playerNames.length; i++){
-                    showPlayers.appendChild(createPlayerBlock(playerNames[i]))
+                    showPlayers.appendChild(createPlayerBlock(playerNames[i], playerPermissionClasses[i]))
+                }
+            }
+        })
+
+        // 自分のパーミッションクラスを取得
+        socket.emit('getPermissionClass', {playerId: playerId, roomId: roomId}, (response) => {
+            if(!response || !response.success){
+                alert(response ? response.message : 'プレイヤー情報の取得に失敗しました');
+            }else{
+                myPermissionClass = response.permissionClass
+                console.log(myPermissionClass)
+                if(myPermissionClass == 'owner'){
+                    startBtn.style.display = 'block'
+                }else{
+                    startBtn.style.display = 'none'
                 }
             }
         })
